set margin to 0 and fix for absolute positioned items clipping

--- a/src/resources/default.css
+++ b/src/resources/default.css
@@ -14,7 +14,7 @@ head {
 
 body {
 	display: block;
-	margin: 8px;
+	margin: 0;
 	line-height: 1.33;
 }
 
